Make meta image black white and fix alignment

--- a/src/styles/sections/get-involved.scss
+++ b/src/styles/sections/get-involved.scss
@@ -29,6 +29,11 @@
             height: auto;
         }
 
+        &.meta img {
+            height: 100%;
+            filter: brightness(0) invert(1);
+        }
+
         &.discourse img {
             filter: invert(100%);
             height: auto;
